2014-08-29  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_load): Fix regression introduced in 94: broken @(load).

2014-08-25  Kaz Kylheku  <kaz@kylheku.com>

	* gc.c (top): Renamed to gc_prot_top, turned extern.
	(prot1, rel1, mark): Follow rename.

	* gc.h (gc_prot_top): Declared.

	* signal.h (extended_jmp_buf): New member, gc_pt.
	(extended_setjmp): Save and restore gc_prot_top.

2014-08-25  Kaz Kylheku  <kaz@kylheku.com>

	GC correctness fixes: make sure we pin down objects for which we borrow
	low level C pointers, while we execute code that can cons memory.

	* lib.c (list_str): Protect the str argument.
	(int_str): Likewise.

	* regex.c (search_regex): protect the haystack string,
	while using the h pointer to its data, since regex_run
	can use the derivative-based engine which conses.

	* stream.c (vformat_str): Protect str argument, since
	put_char might conceivably cons.
	(vformat): Protect fmtstr.

2014-08-14  Kaz Kylheku  <kaz@kylheku.com>

	Version 96.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

	* txr.vim: Regenerated.

2014-08-13  Kaz Kylheku  <kaz@kylheku.com>

	Uprooting stupidities in handling of output variables.

	* parser.y (o_elems_transform): Remove useless function which
	was only unwrapping the strange parse of output vars.
	(o_elems_opt, rep_elem, quasilit, wordsqlit): Eliminate
	o_elems_transform call.
	(o_var, q_var): Eliminate the phrase structure rules which
	match an extra o_elem or quasi_item, and which incorporate
	them into the var syntax tree element. Place the modifiers
	into the third position, not fourth.

	* eval.c (subst_vars): Eliminate handling of "pat"
	element. Actually that was not even there thanks to
	o_elems_transform being applied: dead code. Pull modifiers
	from the third element of the var form now, not fourth.

	* match.c (subst_vars): Similar changes as in the match.c
	subst_vars function. Here the pat variable is even more obviously